--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="tihonov.photo">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -20,9 +20,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".DetailsActivity" />
-
-        <service android:name=".StringLoader" />
-        <service android:name=".PhotoLoader" />
+        <!-- <class android:name="app" /> -->
+        <activity android:name=".FavActivity"></activity>
     </application>
 
 </manifest>
