--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:windowSoftInputMode="stateHidden">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,8 +23,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".DetailsActivity" />
-        <!-- <class android:name="app" /> -->
-        <activity android:name=".FavActivity"></activity>
+        <activity android:name=".FavActivity" />
     </application>
 
 </manifest>
