--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:name="Instance"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -24,6 +25,8 @@
         </activity>
         <activity android:name=".DetailsActivity" />
         <activity android:name=".FavActivity" />
+        <service android:name=".DBReader"/>
+        <service android:name=".DBgetById"/>
     </application>
 
 </manifest>
